--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
       if: steps.cache-restore.outputs.cache-hit != 'true'
       run: npm ci
     - run: npm run build --if-present
-      env: |
-        FM_CLIENT_WEBSHOP_API_URL : ${{ env.FM_CLIENT_WEBSHOP_API_URL }}
-        FM_CLIENT_WEBSHOP_REVOLUT_MODE : ${{ env.FM_CLIENT_WEBSHOP_REVOLUT_MODE }}
-        FM_HEADER_CAROUSEL_OFF_COOKIE_KEY : ${{ env.FM_HEADER_CAROUSEL_OFF_COOKIE_KEY }}
-        FM_COMPANY_NAME_SHORT : ${{ env.FM_COMPANY_NAME_SHORT }}
-        FM_COMPANY_NAME_FULL : ${{ env.FM_COMPANY_NAME_FULL }}
-        FM_PUBLIC_IMAGE_URL_PREFIX : ${{ env.FM_PUBLIC_IMAGE_URL_PREFIX }}
+      env: 
+        FM_CLIENT_WEBSHOP_API_URL: ${{ env.FM_CLIENT_WEBSHOP_API_URL }}
+        FM_CLIENT_WEBSHOP_REVOLUT_MODE: ${{ env.FM_CLIENT_WEBSHOP_REVOLUT_MODE }}
+        FM_HEADER_CAROUSEL_OFF_COOKIE_KEY: ${{ env.FM_HEADER_CAROUSEL_OFF_COOKIE_KEY }}
+        FM_COMPANY_NAME_SHORT: ${{ env.FM_COMPANY_NAME_SHORT }}
+        FM_COMPANY_NAME_FULL: ${{ env.FM_COMPANY_NAME_FULL }}
+        FM_PUBLIC_IMAGE_URL_PREFIX: ${{ env.FM_PUBLIC_IMAGE_URL_PREFIX }}
