--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
     - run: npm run build --if-present
       env: 
         FM_CLIENT_WEBSHOP_API_URL: ${{ env.FM_CLIENT_WEBSHOP_API_URL }}
-        FM_CLIENT_WEBSHOP_REVOLUT_MODE: ${{ env.FM_CLIENT_WEBSHOP_REVOLUT_MODE }}
-        FM_HEADER_CAROUSEL_OFF_COOKIE_KEY: ${{ env.FM_HEADER_CAROUSEL_OFF_COOKIE_KEY }}
-        FM_COMPANY_NAME_SHORT: ${{ env.FM_COMPANY_NAME_SHORT }}
-        FM_COMPANY_NAME_FULL: ${{ env.FM_COMPANY_NAME_FULL }}
-        FM_PUBLIC_IMAGE_URL_PREFIX: ${{ env.FM_PUBLIC_IMAGE_URL_PREFIX }}
+        # FM_CLIENT_WEBSHOP_REVOLUT_MODE: ${{ env.FM_CLIENT_WEBSHOP_REVOLUT_MODE }}
+        # FM_HEADER_CAROUSEL_OFF_COOKIE_KEY: ${{ env.FM_HEADER_CAROUSEL_OFF_COOKIE_KEY }}
+        # FM_COMPANY_NAME_SHORT: ${{ env.FM_COMPANY_NAME_SHORT }}
+        # FM_COMPANY_NAME_FULL: ${{ env.FM_COMPANY_NAME_FULL }}
+        # FM_PUBLIC_IMAGE_URL_PREFIX: ${{ env.FM_PUBLIC_IMAGE_URL_PREFIX }}
