--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       run: npm ci
     - run: npm run build --if-present
       env: 
-        FM_CLIENT_WEBSHOP_API_URL: ${{ env.FM_CLIENT_WEBSHOP_API_URL }}
+        FM_CLIENT_WEBSHOP_API_URL: ${{ vars.FM_CLIENT_WEBSHOP_API_URL }}
