--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^4.16.10",
     "nanostores": "^0.11.2",
     "tailwindcss": "^3.4.10"
+  },
+  "devDependencies": {
+    "turnstile-types": "^1.2.3"
   }
 }
