--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
-    "turnstile-types": "^1.2.3"
+    "@typescript-eslint/parser": "^8.18.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "globals": "^15.13.0",
+    "turnstile-types": "^1.2.3",
+    "typescript-eslint": "^8.18.0"
   }
 }
