--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
     - run: npm run build --if-present
       env: 
         FM_CLIENT_WEBSHOP_API_URL: ${{ vars.FM_CLIENT_WEBSHOP_API_URL }}
-        FM_ENV_MODE: ${{ vars.FM_ENV_MODE }}
+        FM_IS_ONLINE: ${{ vars.FM_IS_ONLINE }}
+        FM_WEBSOCKET_URL: ${{ vars.FM_WEBSOCKET_URL }}
