--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
     - run: npm run build --if-present
       env: 
         FM_CLIENT_WEBSHOP_API_URL: ${{ vars.FM_CLIENT_WEBSHOP_API_URL }}
-        FM_IS_ONLINE: ${{ vars.FM_IS_ONLINE }}
         FM_WEBSOCKET_URL: ${{ vars.FM_WEBSOCKET_URL }}
+        PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX: ${{ vars.PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX }}
