--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,4 @@ jobs:
         FM_CLIENT_WEBSHOP_API_URL: ${{ vars.FM_CLIENT_WEBSHOP_API_URL }}
         FM_WEBSOCKET_URL: ${{ vars.FM_WEBSOCKET_URL }}
         PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX: ${{ vars.PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX }}
+        PUBLIC_FM_DELIVERY_PROOF_IMAGE_URL_PREFIX: ${{ vars.PUBLIC_FM_DELIVERY_PROOF_IMAGE_URL_PREFIX }}
