--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,4 @@ jobs:
         FM_WEBSOCKET_URL: ${{ vars.FM_WEBSOCKET_URL }}
         PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX: ${{ vars.PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX }}
         PUBLIC_FM_DELIVERY_PROOF_IMAGE_URL_PREFIX: ${{ vars.PUBLIC_FM_DELIVERY_PROOF_IMAGE_URL_PREFIX }}
+        PUBLIC_FM_COMPANY_NAME_SHORT: ${{ vars.PUBLIC_FM_COMPANY_NAME_SHORT }}
