--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
     "eslint-plugin-astro": "^1.3.1",
