--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "astro dev",
-    "start": "node ./dist/server/entry.mjs",
+    "start": "node ./entry.mjs",
     "build": "astro build",
     "preview": "astro preview"
   },
@@ -12,6 +12,7 @@
     "@nanostores/solid": "^0.5.0",
     "@revolut/checkout": "^1.1.19",
     "astro": "^5.0.5",
+    "http-proxy-middleware": "^3.0.3",
     "nanostores": "^0.11.3",
     "tailwindcss": "^3.4.16"
   },
