--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "astro dev",
-    "start": "node ./server.js",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview"
   },
@@ -12,7 +12,6 @@
     "@nanostores/solid": "^0.5.0",
     "@revolut/checkout": "^1.1.19",
     "astro": "^5.0.5",
-    "express": "^4.21.2",
     "http-proxy-middleware": "^3.0.3",
     "nanostores": "^0.11.3",
     "tailwindcss": "^3.4.16"
@@ -25,6 +24,5 @@
     "globals": "^15.13.0",
     "turnstile-types": "^1.2.3",
     "typescript-eslint": "^8.18.0"
-  },
-  "type": "module"
+  }
 }
