--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,4 @@ jobs:
         PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY: ${{ vars.PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY }}
         PUBLIC_FM_CLIENT_WEBSHOP_REVOLUT_MODE: ${{ vars.PUBLIC_FM_CLIENT_WEBSHOP_REVOLUT_MODE }}
         PUBLIC_FM_ACCEPT_MEMBERSHIP: ${{ vars.PUBLIC_FM_ACCEPT_MEMBERSHIP }}
+        FM_IS_ONLINE: ${{ vars.FM_IS_ONLINE }}
