--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@astrojs/node": "^9.0.0",
     "@astrojs/solid-js": "^5.0.1",
     "@astrojs/tailwind": "^5.1.4",
+    "@fontsource/noto-sans-jp": "^5.1.1",
+    "@fontsource/noto-serif-jp": "^5.1.2",
+    "@fontsource/yuji-syuku": "^5.1.1",
     "@nanostores/solid": "^0.5.0",
     "@revolut/checkout": "^1.1.19",
     "astro": "^5.1.1",
