--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "astro": "^5.1.1",
     "http-proxy-middleware": "^3.0.3",
     "nanostores": "^0.11.3",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "zaraz-ts": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
