--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@revolut/checkout": "^1.1.19",
     "astro": "^5.1.1",
     "http-proxy-middleware": "^3.0.3",
+    "marked": "^15.0.6",
     "nanostores": "^0.11.3",
+    "sanitize-html": "^2.14.0",
     "tailwindcss": "^3.4.16",
     "zaraz-ts": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
     "eslint-plugin-astro": "^1.3.1",
