--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "marked": "^15.0.6",
     "nanostores": "^0.11.3",
     "sanitize-html": "^2.14.0",
+    "sass": "^1.84.0",
     "tailwindcss": "^3.4.16",
     "zaraz-ts": "^1.2.0"
   },
